# bloggy

./: '  .gitignore  Cargo.toml  Dockerfile  certificate.pem  justfile  key.pem
posts/: a@b@c.md  about.md  something.md  test.md
src/: app.rs  file.rs  main.rs  markdown.rs  state.rs  templates.rs  watcher.rs
src/handlers/: delete_post.rs  get_about.rs  get_post.rs  get_root.rs  handle_error.rs  mod.rs  not_found.rs  params.rs  upload_post.rs
template/: package.json  tailwind.config.js
template/public/: index.html  output.css
template/src/: input.css
themes/: theme.tmTheme
