[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = []
description = ""
edition = "2021"
exclude = ["rustfmt.toml"]
keywords = []
license = "MIT"
name = "bloggy"
readme = "README.md"
repository = "https://github.com/yamafaktory/bloggy"
rust-version = "1.65"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68"
comrak = "0.16.0"
notify = "5.0.0"
serde_json = "1.0.91"
tracing = "0.1.37"
url = "2.3.1"

[dependencies.axum]
features = ["http2", "multipart"] 
version = "0.6.1"

[dependencies.axum-server]
features = ["tls-rustls"] 
version = "0.4.4"

[dependencies.minijinja]
features = ["source"]
version = "0.30.1"

[dependencies.serde]
features = ["derive"] 
version = "1.0.152"

[dependencies.syntect]
features = ["plist-load"]
version= "5.0.0"

[dependencies.time]
features = ["formatting"] 
version = "0.3.17"

[dependencies.tokio]
features = ["full"] 
version = "1.24.0"

[dependencies.tower]
features = ["full"] 
version = "0.4.13"

[dependencies.tower-http]
features = ["full"] 
version = "0.3.5"

[dependencies.tracing-subscriber]
features = ["env-filter"] 
version = "0.3.16"
