[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = []
description = ""
edition = "2021"
exclude = ["rustfmt.toml"]
keywords = []
license = "MIT"
name = "bloggy"
readme = "README.md"
repository = "https://github.com/yamafaktory/bloggy"
rust-version = "1.65"
version = "0.1.0"

[dependencies]
anyhow = "1.0.69"
comrak = "0.16.0"
notify = "5.1.0"
serde_json = "1.0.93"
tracing = "0.1.37"
url = "2.3.1"

[dependencies.axum]
features = ["http2", "multipart"] 
version = "0.6.8"

[dependencies.axum-server]
features = ["tls-rustls"] 
version = "0.4.6"

[dependencies.minijinja]
features = ["source"]
version = "0.30.4"

[dependencies.serde]
features = ["derive"] 
version = "1.0.152"

[dependencies.syntect]
features = ["plist-load"]
version= "5.0.0"

[dependencies.time]
features = ["formatting"] 
version = "0.3.20"

[dependencies.tokio]
features = ["full"] 
version = "1.25.0"

[dependencies.tower]
features = ["full"] 
version = "0.4.13"

[dependencies.tower-http]
features = ["full"] 
version = "0.4.0"

[dependencies.tracing-subscriber]
features = ["env-filter"] 
version = "0.3.16"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
